# energy-servicehost

./: .gitignore  Directory.Build.props  README.md  vcpkg.json
src/: ServiceHost.sln  keyPair.snk
src/Dependencies/libtase2-2.3.0/: CHANGELOG  CMakeLists.txt  README-Java.md  README.md
src/Dependencies/libtase2-2.3.0/NET/: libtase2.NET.sln
src/Dependencies/libtase2-2.3.0/NET/core/3.0/libtase2.NETCore3/: libtase2.NETCore3.sln
src/Dependencies/libtase2-2.3.0/NET/examples/dual_role1/endpoint_active/: ActiveEndpoint.cs  endpoint_active.csproj
src/Dependencies/libtase2-2.3.0/NET/examples/dual_role1/endpoint_passive/: PassiveEndpoint.cs  endpoint_passive.csproj
src/Dependencies/libtase2-2.3.0/NET/examples/dual_role2/endpoint1/: Endpoint1.cs  endpoint1.csproj
src/Dependencies/libtase2-2.3.0/NET/examples/dual_role2/endpoint2/: Endpoint2.cs  endpoint2.csproj
src/Dependencies/libtase2-2.3.0/NET/examples/dual_role2/endpoint3/: Endpoint3.cs  endpoint3.csproj
src/Dependencies/libtase2-2.3.0/NET/examples/tase2_client/: IccpClientExample1.cs  tase2_client.csproj
src/Dependencies/libtase2-2.3.0/NET/examples/tase2_client/Properties/: AssemblyInfo.cs
src/Dependencies/libtase2-2.3.0/NET/examples/tase2_client2/: IccpClientExample2.cs  tase2_client2.csproj
src/Dependencies/libtase2-2.3.0/NET/examples/tase2_client2/Properties/: AssemblyInfo.cs
src/Dependencies/libtase2-2.3.0/NET/examples/tase2_client3/: IccpClientExample3.cs  tase2_client3.csproj
src/Dependencies/libtase2-2.3.0/NET/examples/tase2_client3/Properties/: AssemblyInfo.cs
src/Dependencies/libtase2-2.3.0/NET/examples/tase2_server/: IccpServerExample1.cs  tase2_server.csproj
src/Dependencies/libtase2-2.3.0/NET/examples/tase2_server/Properties/: AssemblyInfo.cs
src/Dependencies/libtase2-2.3.0/NET/examples/tase2_server2/: IccpServerExample2.cs  tase2_server2.csproj
src/Dependencies/libtase2-2.3.0/NET/examples/tase2_server2/Properties/: AssemblyInfo.cs
src/Dependencies/libtase2-2.3.0/NET/libtase2.NET/: libtase2.NET.csproj
src/Dependencies/libtase2-2.3.0/NET/libtase2.NET/Properties/: AssemblyInfo.cs
src/Dependencies/libtase2-2.3.0/NET/libtase2.NET/client/: Client.cs  ClientDSTransferSet.cs  ClientDataSet.cs  ClientException.cs
src/Dependencies/libtase2-2.3.0/NET/libtase2.NET/common/: AuthenticationMethod.cs  CommandValue.cs  Endpoint.cs  EndpointConnection.cs  PointValue.cs  ReportReason.cs  SupportedFeatures.cs  TLSConfiguration.cs  TLSVersion.cs  TagValue.cs  Tase2Library.cs
src/Dependencies/libtase2-2.3.0/NET/libtase2.NET/server/: BilateralTable.cs  ControlPoint.cs  DSTransferSet.cs  DataModel.cs  DataPoint.cs  DataSet.cs  Domain.cs  IndicationPoint.cs  ProtectionEquipment.cs  SentPointValue.cs  Server.cs
src/Dependencies/libtase2-2.3.0/NET/tests/: ClientTests.cs  Test.cs  tests.csproj
src/Dependencies/libtase2-2.3.0/config-mms/: stack_config.h
src/Dependencies/libtase2-2.3.0/dependencies/libmms/: CMakeLists.txt  COPYING  Makefile  MakefileLibMms.mk
src/Dependencies/libtase2-2.3.0/dependencies/libmms/examples/: Makefile
src/Dependencies/libtase2-2.3.0/dependencies/libmms/examples/mms_utility/: mms_utility.c
src/Dependencies/libtase2-2.3.0/dependencies/libmms/hal/: CMakeLists.txt
src/Dependencies/libtase2-2.3.0/dependencies/libmms/make/: target_system_mms.mk
src/Dependencies/libtase2-2.3.0/dependencies/libmms/src/: CMakeLists.txt
src/Dependencies/libtase2-2.3.0/dependencies/libmms/src/common/: avl_tree.c  buffer_chain.c  byte_buffer.c  conversions.c  hash_tree.c  lib_memory.c  linked_list.c  mem_alloc_linked_list.c  simple_allocator.c  string_utilities.c
src/Dependencies/libtase2-2.3.0/dependencies/libmms/src/logging/: log_storage.c  logging_api.h
src/Dependencies/libtase2-2.3.0/doc/: libtase2_PICS.docx  tase2_developer_guide.adoc
src/Dependencies/libtase2-2.3.0/doxygen/: Doxyfile.Java.in  Doxyfile.NET.in  Doxyfile.in  mainpage.doxygen  mainpage_net.md
src/Dependencies/libtase2-2.3.0/examples/: CMakeLists.txt
src/Dependencies/libtase2-2.3.0/examples/active_server/: CMakeLists.txt  active_server.c
src/Dependencies/libtase2-2.3.0/examples/basic_client/: CMakeLists.txt  iccp_client1.c
src/Dependencies/libtase2-2.3.0/examples/basic_server/: CMakeLists.txt  iccp_server1.c
src/Dependencies/libtase2-2.3.0/examples/browse_client/: CMakeLists.txt  browse_client.c
src/Dependencies/libtase2-2.3.0/examples/client2/: CMakeLists.txt  iccp_client2.c
src/Dependencies/libtase2-2.3.0/examples/dual_role1/endpoint_active/: CMakeLists.txt  endpoint_active.c
src/Dependencies/libtase2-2.3.0/examples/dual_role1/endpoint_passive/: CMakeLists.txt  endpoint_passive.c
src/Dependencies/libtase2-2.3.0/examples/dual_role2/endpoint1/: CMakeLists.txt  endpoint1_passive.c
src/Dependencies/libtase2-2.3.0/examples/dual_role2/endpoint2/: CMakeLists.txt  endpoint2.c
src/Dependencies/libtase2-2.3.0/examples/passive_client/: CMakeLists.txt  passive_client.c
src/Dependencies/libtase2-2.3.0/examples/server2/: CMakeLists.txt  iccp_server2.c
src/Dependencies/libtase2-2.3.0/examples/stress_test_client/: CMakeLists.txt  stress_test_client.c
src/Dependencies/libtase2-2.3.0/jna/: .classpath  .project  build.xml
src/Dependencies/libtase2-2.3.0/jna/src-main/dual_role2/endpoint1/: Endpoint1.java
src/Dependencies/libtase2-2.3.0/jna/src-main/libtase2/examples/: ClientExample.java  ServerExample.java
src/Dependencies/libtase2-2.3.0/src/inc/: tase2_api_exports.h  tase2_client.h  tase2_common.h  tase2_endpoint.h  tase2_model.h  tase2_server.h
src/Dependencies/libtase2-2.3.0/src/inc_internal/: ds_transfer_set.h  tase2_client_internal.h  tase2_common_internal.h  tase2_endpoint_internal.h  tase2_runtime_check.h  tase2_server_internal.h  tase2_version.h.cmake
src/Dependencies/libtase2-2.3.0/src/tase2_client/: tase2_client.c
src/Dependencies/libtase2-2.3.0/src/tase2_common/: tase2_common.c  tase2_endpoint.c  tase2_log.c  tase2_object_values.c  tase2_point_value.c
src/Dependencies/libtase2-2.3.0/src/tase2_server/: ds_transfer_set.c  im_transfer_set.c  tase2_blt.c  tase2_model.c  tase2_server.c
(+1612 files in other folders)
