add_subdirectory(basic_client)
add_subdirectory(client2)
add_subdirectory(browse_client)
add_subdirectory(basic_server)
add_subdirectory(server2)
add_subdirectory(active_server)
add_subdirectory(passive_client)
add_subdirectory(stress_test_client)
add_subdirectory(dual_role1/endpoint_passive)
add_subdirectory(dual_role1/endpoint_active)
add_subdirectory(dual_role2/endpoint1)
add_subdirectory(dual_role2/endpoint2)
